Add all items in html

--- a/index.html
+++ b/index.html
@@ -9,38 +9,65 @@
 <body>
     <div class="header">
         <div class="navbar">
-            <div class="logo">Header Logo</div>
+            <div class="logo">Totu</div>
 
             <div class="links">
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="#">Merchandise</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="header-content">
             <div class="header-texts">
-                <div class="awesome-header">This website is awesome</div>
-                <div class="awesome-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="awesome-header">Who is Totu?</div>
+                <div class="awesome-subtext">This website has all info about Krishna Sarathi's pet, Totu, The Alexandrine Parrot.</div>
                 <button class="signup">Sign Up</button>
             </div>
-            <div class="placeholder">this is a placeholder for an image</div>
+            <div class="placeholder"><img src="images/totu1.png" alt="Totu" style="width:300px; height: 150px;object-fit: cover;"></div>
         </div>
-        
     </div>
 
     <div class="content">
+        <div class="content-text">Images of Totu.</div>
+        <div class="images">
+            <div class="img1">
+                <img src="images/totu2.png" alt="Petting Totu" style="width:200px; height: 200px;object-fit: cover;">
+                <div class="stext1">An image showing Totu being petted and he is curiously looking at the camera</div>
+            </div>
 
+            <div class="img2">
+                <img src="images/totu3.png" alt="Totu Sitting" style="width:200px; height: 200px;object-fit: cover;">
+                <div class="stext2">An Image showing totu looking at something else while sitting</div>
+            </div>
+
+            <div class="img3">
+                <img src="images/totu4.png" alt="Totu Sitting 2" style="width:200px; height: 200px;object-fit: cover;">
+                <div class="stext3">An Image showing Tired Totu Just Sitting</div>
+            </div>
+            
+            <div class="img4">
+                <img src="images/totu5.png" alt="Totu Looking at Camera" style="width:200px; height: 200px;object-fit: cover;">
+                <div class="stext4">An Image showing Totu curiously looking at the camera</div>
+            </div>
+        </div>
     </div>
 
-    <div class="quote">
-
+    <div class="quote-container">
+        <div class="quote-text">
+            <div class="quote">Always bite everything you see.</div>
+            <div class="person">-Totu, The Alexandrine Parrot</div>
+        </div>
     </div>
 
     <div class="footer">
-
+        <div class="blue-box">
+            <div class="head">Sign Up Now</div>
+            <div class="content">For more info on Totu</div>
+            <button>Sign Up</button>
+        </div>
     </div>
 
 </body>
