Add styling to the elements.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 <body>
     <div class="header">
         <div class="navbar">
             <div class="logo">Totu</div>
-
             <div class="links">
                 <ul>
                     <li><a href="#">Merchandise</a></li>
@@ -22,11 +23,13 @@
 
         <div class="header-content">
             <div class="header-texts">
-                <div class="awesome-header">Who is Totu?</div>
-                <div class="awesome-subtext">This website has all info about Krishna Sarathi's pet, Totu, The Alexandrine Parrot.</div>
+                <div class="texts">
+                    <div class="awesome-header">So, Who is Totu?</div>
+                    <div class="awesome-subtext">Totu is Krishna Sarathi's only Pet. He is an Alexandrine parrot.</div>
+                </div>
                 <button class="signup">Sign Up</button>
             </div>
-            <div class="placeholder"><img src="images/totu1.png" alt="Totu" style="width:300px; height: 150px;object-fit: cover;"></div>
+            <div class="placeholder"><img src="images/totu1.png" alt="Totu" style="width:350px; height: 180px;object-fit: cover;"></div>
         </div>
     </div>
 
@@ -34,23 +37,23 @@
         <div class="content-text">Images of Totu.</div>
         <div class="images">
             <div class="img1">
-                <img src="images/totu2.png" alt="Petting Totu" style="width:200px; height: 200px;object-fit: cover;">
-                <div class="stext1">An image showing Totu being petted and he is curiously looking at the camera</div>
+                <img src="images/totu2.png" alt="Petting Totu" style="width:180px; height: 180px;object-fit: cover;">
+                <div class="stext">An image showing Totu being petted and he is curiously looking at the camera</div>
             </div>
 
             <div class="img2">
-                <img src="images/totu3.png" alt="Totu Sitting" style="width:200px; height: 200px;object-fit: cover;">
-                <div class="stext2">An Image showing totu looking at something else while sitting</div>
+                <img src="images/totu3.png" alt="Totu Sitting" style="width:180px; height: 180px;object-fit: cover;">
+                <div class="stext">An Image showing totu looking at something else while sitting</div>
             </div>
 
             <div class="img3">
-                <img src="images/totu4.png" alt="Totu Sitting 2" style="width:200px; height: 200px;object-fit: cover;">
-                <div class="stext3">An Image showing Tired Totu Just Sitting</div>
+                <img src="images/totu4.png" alt="Totu Sitting 2" style="width:180px; height: 180px;object-fit: cover;">
+                <div class="stext">An Image showing Tired Totu Just Sitting</div>
             </div>
             
             <div class="img4">
-                <img src="images/totu5.png" alt="Totu Looking at Camera" style="width:200px; height: 200px;object-fit: cover;">
-                <div class="stext4">An Image showing Totu curiously looking at the camera</div>
+                <img src="images/totu5.png" alt="Totu Looking at Camera" style="width:180px; height: 180px;object-fit: cover;">
+                <div class="stext">An Image showing Totu curiously looking at the camera</div>
             </div>
         </div>
     </div>
@@ -64,9 +67,13 @@
 
     <div class="footer">
         <div class="blue-box">
-            <div class="head">Sign Up Now</div>
-            <div class="content">For more info on Totu</div>
-            <button>Sign Up</button>
+            <div class="footer-text">
+                <div class="head">Sign Up Now!</div>
+                <div class="footer-content">For more info on Totu</div>
+            </div>
+            <div class="signup-button">
+                <a href="#">Sign Up</a>
+            </div>
         </div>
     </div>
 
